# Sirin

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  expanded.rs  todo.md
.cargo/: .config.toml
bmp3/: Cargo.toml
bmp3/src/: compensation.rs  hal.rs  lib.rs
dev-csr/: Cargo.toml
dev-csr-macro/src/: lib.rs  parse.rs
dev-csr/dev-csr-macro/: Cargo.toml
dev-csr/src/: lib.rs
devices/sirin-zeta-rf/: Cargo.toml
devices/sirin-zeta-rf/src/: lib.rs
examples/bare/: Cargo.toml
examples/bare/.cargo/: config.toml
examples/bare/src/: main.rs
examples/imu-test/: Cargo.toml  Embed.toml  rust-toolchain.toml
examples/imu-test/src/: main.rs
h3lis/: Cargo.toml
h3lis/src/: lib.rs
lsm6dso/: Cargo.toml  LICENSE  README.md  lsm6dso_expanded.rs
lsm6dso/src/: lib.rs
old-macro/: Cargo.toml
old-macro/src/: parse.rs
old-periphs-macro/src/: lib.rs
periph/sirin-zeta-rf/: Cargo.toml
periph/sirin-zeta-rf/src/: lib.rs
periphs-macro/: Cargo.toml
periphs-macro/src/: lib.rs  parse.rs
periphs-macro2/: Cargo.toml
periphs-macro2/src/: parse.rs
rfm9x/: Cargo.toml
rfm9x/src/: Cargo.toml  lib.rs
sirin/: Cargo.toml
sirin-c/: Cargo.toml  build.rs
sirin-c/src/: sirin-c.c
sirin-macros/: Cargo.toml
sirin-macros/src/: lib.rs
sirin/src/: gpio.rs  lib.rs  pinout.rs  sync.rs  triplet.rs
sirin/src/spi/: error.rs  instance.rs  mod.rs  mutex_spi.rs  spi.rs  spi2.rs  spi_interface.rs
sirin_macros/: Cargo.toml
sirin_macros/src/: lib.rs
spi-handle/src/: Cargo.toml
src/: delay.rs  hal.rs  lib.rs
src/spi/: config.rs  mod.rs  spi.rs  spi_device.rs  spi_interface.rs
w25q/: Cargo.toml  README.md
w25q/src/: lib.rs  yield_now.rs
