[package]
name = "sirin"
version = "0.1.0"
edition = "2021"

[workspace]

# Own the libs one crate at a time
[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
sirin_macros = { path = "./sirin_macros" }

# external
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { path = "../embassy/embassy-stm32", version = "0.1.0", features = [ "stm32h743bi" ]}
quote = "1.0.33"
static_cell = "1.2.0"
syn = { version = "2.0.31", features = ["full"] }
async-trait = "0.1.74"
enum-display-derive = "0.1.1"


