[package]
name = "rfm9x"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
dev-csr = { version = "0.1.0", path = "../dev-csr" }
embassy-futures = "0.1.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
spi-handle = { version = "0.1.0", path = "../spi-handle" }
uunit = { version = "0.1.0", git = "https://github.com/Nautki/uunit" }

[features]
defmt = []
