[package]
name = "sirin-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "*", features = ["extra-traits", "full"] }
proc-macro2 = "*"