[package]
name = "sirin"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Own the libs one crate at a time
[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
sirin-macros = { path = "../sirin-macros" }

# external
cortex-m-rt = "0.7.3"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "^0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", version = "^0.1.0", features = [ "stm32h743ii" ]}
embassy-sync = { git = "https://github.com/embassy-rs/embassy", version = "^0.5.0" }
quote = "1.0.33"
static_cell = "1.2.0"
syn = { version = "2.0.31", features = ["full"] }
async-trait = "0.1.74"
enum-display-derive = "0.1.1"
embedded-hal-async = "1.0.0"
unhygienic2 = "0.1.0"
derive-new = "0.6.0"
