[package]
name = "sirin"
version = "0.1.0"
edition = "2021"
license = "BSD0"

# Own the libs one crate at a time
[lib]
test = false
bench = false

[features]
s1 = []

[dependencies]
# internal
sirin-macros = { path = "../sirin-macros" }

# external
cortex-m-rt = "0.7.3"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [ "stm32h743ii" ]}
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
static_cell = "^2.1.0"
async-trait = "0.1.74"
enum-display-derive = "0.1.1"
embedded-hal-async = "1.0.0"
unhygienic2 = "0.1.0"
derive-new = "0.6.0"
spi-handle = { version = "0.1.0", path = "../../spi-handle" }
bmp3 = { version = "0.1.0", path = "../../bmp3" }
defmt = "0.3.8"
rfm9x = { version = "0.1.0", path = "../../rfm9x" }
w25q = { version = "0.1.0", path = "../../w25q" }
lsm6dso = { version = "0.1.0", path = "../../lsm6dso" }
